syntax = "proto3";

package poverty.api.poverty.activity.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "poverty.api.poverty.activity.v1";
option java_outer_classname = "ActivityV1";

import "validate/validate.proto";

message GetActivityRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message GetActivityReply {
  uint32 id = 1;
  string title = 2;
  string description = 3;
  string cover = 4;
  string unit = 5;
  string content = 6;
  optional bool isTop = 7;
  optional bool status = 8;
  uint32 read = 9;
  uint32 createdAt = 10;
  uint32 updatedAt = 11;
}

message ListActivityRequest {
  uint32 page = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gte: 1,lte:50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id","is_top","created_at","updated_at"]}];
  optional string title = 5[(validate.rules).string = {min_len: 1,max_len: 40}];
  optional bool isTop = 6;
  optional bool status = 7;
}

message ListActivityReply {
  message Activity {
    uint32 id = 1;
    string title = 2;
    string description = 3;
    string cover = 4;
    string unit = 5;
    optional bool isTop = 6;
    optional bool status = 7;
    uint32 read = 8;
    uint32 createdAt = 9;
    uint32 updatedAt = 10;
  }
  uint32 total = 1;
  repeated Activity list = 2;
}

message CreateActivityRequest {
  string title = 1[(validate.rules).string = {min_len: 1,max_len: 40}];
  string description = 2[(validate.rules).string = {min_len: 1}];
  string cover = 3[(validate.rules).string = {min_len: 1}];
  string unit = 4[(validate.rules).string = {min_len: 1}];
  string content = 5;
  optional bool isTop = 6;
  optional bool status = 7;
  uint32 read = 8;
}

message CreateActivityReply {
  uint32 id = 1;
}

message UpdateActivityRequest {
  uint32 id = 1;
  optional string title = 2[(validate.rules).string = {min_len: 1,max_len: 40}];
  optional string description = 3[(validate.rules).string = {min_len: 1}];
  optional string cover = 4[(validate.rules).string = {min_len: 1}];
  optional string unit = 5[(validate.rules).string = {min_len: 1}];
  optional string content = 6;
  optional bool isTop = 7;
  optional bool status = 8;
  optional uint32 read = 9;
}

message UpdateActivityReply {
}

message DeleteActivityRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message DeleteActivityReply {
}

